syntax = "proto3";
package tendermint.mempool;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/mempool";

message Txs {
  repeated bytes txs = 1;
}

message SeenTx {
  bytes tx_key = 1;
}

message WantTx {
  bytes tx_key = 1;
}

message HasBlockTxs {
  bytes block_id      = 1;
  bytes has_bit_array = 2;
}

message Message {
  oneof sum {
    Txs         txs           = 1;
    SeenTx      seen_tx       = 2;
    WantTx      want_tx       = 3;
    HasBlockTxs has_block_txs = 4;
  }
}
